@@ -74,15 +74,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|TimeZone
 import|;
 end_import
@@ -686,9 +677,14 @@ name|messageID
 operator|+
 literal|" ["
 operator|+
+name|dateFormat
+operator|.
+name|format
+argument_list|(
 operator|new
 name|Date
 argument_list|()
+argument_list|)
 operator|+
 literal|"; "
 operator|+
